# IDEClient

./: CMakeLists.txt  main.cpp
IDEinterface/: fileopt.cpp  ideclient.cpp  ideclient.h
pojo/: ServerArgs.cpp  ServerArgs.h
startup/: CMakeLists.txt
util/file/: Config.h  filetcpclient.h  filetcpserver.h  util.h
util/getInfo/: Info-config.h  getInfo.h  testinfo.cpp
